--- a/.travis.yml
+++ b/.travis.yml
@@ -164,6 +164,7 @@ matrix:
             - php7.2
             - php7.2-gd
             - unzip
+            - automake
             - valgrind
       env:
         - MATRIX_EVAL="CC=gcc && CXX=g++"
@@ -181,6 +182,7 @@ matrix:
             - gcovr
             - gperf
             - g++-5
+            - automake
             - lcov
             - libgd-dev
             - php7.2
@@ -205,6 +207,7 @@ matrix:
             - g++-6
             - lcov
             - libgd-dev
+            - automake
             - php7.2
             - php7.2-gd
             - unzip
@@ -226,6 +229,7 @@ matrix:
             - gperf
             - g++-7
             - lcov
+            - automake
             - libgd-dev
             - php7.2
             - php7.2-gd
@@ -248,6 +252,7 @@ matrix:
             - gperf
             - g++-8
             - lcov
+            - automake
             - libgd-dev
             - php7.2
             - php7.2-gd
@@ -270,6 +275,7 @@ matrix:
             - gcovr
             - gperf
             - lcov
+            - automake
             - libgd-dev
             - php7.2
             - php7.2-gd
@@ -293,6 +299,7 @@ matrix:
             - gcovr
             - gperf
             - g++-4.9
+            - automake
             - lcov
             - libgd-dev
             - php7.2
